# tests

./: docker-compose.yml  pyproject.toml
backend/: main.py
backend/alembic/: env.py
backend/alembic/versions/: 2026_02_23_1709-2098e63f017c_fin_docs.py
backend/core/: base_class.py  lifespan.py
backend/crud/: mongo_crud.py
backend/models/: __init__.py  fin_docs.py
backend/mongo_db/: db_helper.py  main.py  mongo_helper.py
backend/postgres_db/: db.py  postgres_helper.py
backend/rabbitMQ/: consumer.py  funcs.py  producer.py
backend/routers/: mongo_router.py
