[project]
name = "mytests"
version = "0.1.0"
description = ""
authors = [
    {name = "Dima",email = "texetbuy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg (>=0.31.0,<0.32.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "fastapi[standard] (>=0.135.0,<0.136.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "pymongo (>=4.16.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
